@@ -7814,6 +7814,19 @@ extern int clusteracct_storage_g_node_up(void *db_conn,
 {
 	if (slurm_acct_storage_init(NULL) < 0)
 		return SLURM_ERROR;
+       
+	/* on some systems we need to make sure we don't say something
+	   is completely up if there are cpus in an error state */
+	if(node_ptr->select_nodeinfo) {
+		uint16_t err_cpus = 0;
+		select_g_select_nodeinfo_get(node_ptr->select_nodeinfo, 
+					     SELECT_NODEDATA_SUBCNT,
+					     NODE_STATE_ERROR,
+					     &err_cpus);
+		if(err_cpus) 
+			return SLURM_SUCCESS;
+	}
+
  	return (*(g_acct_storage_context->ops.node_up))
 		(db_conn, cluster, node_ptr, event_time);
 }
