@@ -142,7 +142,8 @@ extern int handle_small_record_request(List records, blockreq_t *blockreq,
 extern int format_node_name(bg_record_t *bg_record, char *buf, int buf_size);
 extern int down_nodecard(char *bp_name, bitoff_t io_start);
 extern int up_nodecard(char *bp_name, bitstr_t *ionode_bitmap);
-extern int put_block_in_error_state(bg_record_t *bg_record, int state);
+extern int put_block_in_error_state(bg_record_t *bg_record,
+				    int state, char *reason);
 extern int resume_block(bg_record_t *bg_record);
 
 #endif /* _BLUEGENE_BG_RECORD_FUNCTIONS_H_ */
